Adding 3 new projects and adding new skill to my skill section

--- a/DynamixCapital.html
+++ b/DynamixCapital.html
@@ -141,6 +141,9 @@
                   <li>
                     Bootstrap
                   </li>
+                  <li>
+                    MSSQL
+                  </li>
                 </ul>
               </div>
 
@@ -153,7 +156,10 @@
                   It allows users login with a password or with 2-factor authentication using popular authenticator applications.
                 </p>
                 <div class="mb-5">
-                  <img src="./images/dynamix/dynamix registration.png" style="width:100%;">
+                  <video width="100%" height="contain" controls>
+                    <source src="./video/Dynamix vid 2.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                  </video>
                 </div>
 
                 <h2 class="mb-3">Blog System</h2>
@@ -161,7 +167,10 @@
                   it allows the administrator add a title, headings, paragraphs, line breaks and images.
                 </p>
                 <div class="mb-5">
-                  <img src="./images/dynamix/dynamix blog.png" style="width:100%;">
+                  <video width="100%" height="contain" controls>
+                    <source src="./video/Dynamix vid 4.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                  </video>
                 </div>
 
                 <h2 class="mb-3">RSS feed</h2>
@@ -169,7 +178,21 @@
                   like CNN, BBC, Fox etc.
                 </p>
                 <div class="mb-5">
-                  <img src="./images/dynamix/dynamix rss.png" style="width:100%;">
+                  <video width="100%" height="contain" controls>
+                    <source src="./video/Dynamix vid 3.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                  </video>
+                </div>
+
+                <h2 class="mb-3">2 Factor Authentication</h2>
+                <p  class="mb-3">The web application implements 2 factor authentication for an extra layer of security, users can use popular authenticator apps
+                  like Microsoft Authenticator, Apple Authenticator, Android Authenticator apps etc.
+                </p>
+                <div class="mb-5">
+                  <video width="100%" height="contain" controls>
+                    <source src="./video/Dynamix vid 5.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                  </video>
                 </div>
 
               </div>
