--- a/Portfolio.html
+++ b/Portfolio.html
@@ -83,6 +83,65 @@
                   </div>
                 </div>
               </div>
+
+              <div class="w-100 portfolio-item d-flex align-items-center mb-5 py-5" style="min-height: 200px;">
+                <div class="container">
+                  <div class="row">
+
+                    <div class="col-lg-8 d-flex flex-column">
+                        <h2 style="font-size: 3em;">Tribe Virtual Styling</h2>
+                        <div style="background-color: #FFC80B; width:75px; height:5px;" class="mb-3"></div>
+                        <p>Virtual Styling Service for all occasions</p>
+                    </div>
+
+                    <div class="col-lg-4 d-flex justify-content-evenly align-items-center">
+                      <a class="btn btn-outline-filled" href="./Tribe.html">View Project</a>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+
+              <div class="w-100 portfolio-item d-flex align-items-center mb-5 py-5" style="min-height: 200px;">
+                <div class="container">
+                  <div class="row">
+
+                    <div class="col-lg-8 d-flex flex-column">
+                        <h2 style="font-size: 3em;">My Top Movies</h2>
+                        <div style="background-color: #FFC80B; width:75px; height:5px;" class="mb-3"></div>
+                        <p>MyTopMovies is a movie ranking web application. </p>
+                    </div>
+
+                    <div class="col-lg-4 d-flex justify-content-evenly align-items-center">
+                      <a class="btn btn-outline-filled" href="https://github.com/YxngDxnny/MyTopMovies" target="_blank">View Code on Github</a>
+
+                      <a class="btn btn-outline-filled" href="./MyTopMovies.html">View Project</a>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+
+              <div class="w-100 portfolio-item d-flex align-items-center mb-5 py-5" style="min-height: 200px;">
+                <div class="container">
+                  <div class="row">
+
+                    <div class="col-lg-8 d-flex flex-column">
+                        <h2 style="font-size: 3em;">Soccer Stat Analyser</h2>
+                        <div style="background-color: #FFC80B; width:75px; height:5px;" class="mb-3"></div>
+                        <p>Web application that scrapes Fbref.com</p>
+                    </div>
+
+                    <div class="col-lg-4 d-flex justify-content-evenly align-items-center">
+                      <a class="btn btn-outline-filled" href="https://github.com/YxngDxnny/soccerStatAnalyser" target="_blank">View Code on Github</a>
+
+                      <a class="btn btn-outline-filled" href="./SoccerStatsAnalyser.html">View Project</a>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+
             </section>
            
           </main>
