--- a/index.html
+++ b/index.html
@@ -341,9 +341,22 @@
                         data-progress=90>
                           <img src="./images/icons8-c-48.png">
                         </div>
-
-                        <h3 class="text-yellow mb-2">c#</h3>
+  
+                        <h3 class="text-yellow mb-2">C#</h3>
                         <p class="text-white">90%</p>
+                      </div>
+
+                      <div class="col-3 d-flex flex-column ps-1 text-center align-items-center mb-5">
+                        <div class="circle-75 bg-dark d-flex justify-content-center align-items-center progress-bar mb-4" role="progressbar"
+                        style="background: 
+                        radial-gradient(closest-side, #120E21 79%, transparent 80% 100%),
+                        conic-gradient(#FFC80B 0%, gray 0);"
+                        data-progress=55>
+                          <img src="./images/icons8-sql-48.png">
+                        </div>
+  
+                        <h3 class="text-yellow mb-2">SQL</h3>
+                        <p class="text-white">55%</p>
                       </div>
 
                       <div class="col-3 d-flex flex-column ps-1 text-center align-items-center mb-5">
@@ -354,11 +367,14 @@
                         data-progress=90>
                           <img src="./images/icons8-bootstrap-48.png">
                         </div>
-
+  
                         <h3 class="text-yellow mb-2">Bootstrap</h3>
                         <p class="text-white">90%</p>
                       </div>
+
                     </div>
+
+                    
 
                     <div class="row justify-content-evenly">
 
@@ -501,7 +517,7 @@
 
                   </div>
 
-                  <p class="mb-3">Take a look at the best and most diverse projects i have worked on.</p>
+                  <p class="mb-3">Take a look at the full list the best and most diverse projects I have worked on.</p>
 
                   <a class="btn btn-outline-filled" href="./Portfolio.html">View My Portfolio</a>
               
