--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
               <div class="row " style="min-height: 600px;">
 
-                <div class="col-lg-6 px-1 text-center d-flex flex-column align-items-center">
+                <div class="col-lg-6 px-1 text-center d-flex flex-column align-items-center mb-5">
                   <table class="w-100 table-bordered table-striped text-center">
                     <thead>
                       <tr>
