--- a/index.html
+++ b/index.html
@@ -485,22 +485,22 @@
 
                   <div class="d-flex justify-content-evenly mb-5 w-100 flex-wrap">
 
-                    <div style="max-width:400px; min-width:300px; min-height: 250px;" class="img-box d-flex align-items-center ms-2 mb-3">
+                    <div style="max-width:400px; min-width:300px; min-height: 300px;" class="img-box d-flex align-items-center ms-2 mb-3">
 
-                      <img class="img-box-img"src="./images/Dynamix.png" style="width:100%;">
+                      <img class="img-box-img"src="./images/MyTopMovies.png" style="width:100%;">
 
                       <div class="w-100 h-100 d-flex flex-column justify-content-center align-items-center img-box-text text-white">
-                        <h4 class="text-Yellow mb-3">Dynamix Capital</h4>
-                        <p class="mb-5">Web Application for a Venture Capitalist Firm</p>
+                        <h4 class="text-Yellow mb-3">My Top Movies</h4>
+                        <p class="mb-5">A movie ranking web application</p>
                         <div class="d-flex justify-content-evenly w-100">
-                          <a class="btn btn-glow-sm" href="https://dynamix.net.in/" target="_blank">Visit Site</a>
-                          <a class="btn btn-glow-sm" href="./DynamixCapital.html">View Project</a>
+                          <a class="btn btn-glow-sm" href="https://github.com/YxngDxnny/MyTopMovies" target="_blank">View Code on Github</a>
+                          <a class="btn btn-glow-sm" href="./MyTopMovies.html">View Project</a>
                         </div>
                       </div>
 
                     </div>
 
-                    <div style="max-width:400px; min-width:300px; min-height: 250px;" class="img-box d-flex align-items-center ms-2 mb-3">
+                    <div style="max-width:400px; min-width:300px; min-height: 300px;" class="img-box d-flex align-items-center ms-2 mb-3">
 
                       <img class="img-box-img"src="./images/Namsac.png" style="width:100%;">
 
