Mock-up not showing fixed

--- a/MyTopMovies.html
+++ b/MyTopMovies.html
@@ -50,7 +50,7 @@
               
 
               <div class="mb-5">
-                <img src="./images/MyTopMovies/MTM Device Mockup-01.jpg" style="width:100%;">
+                <img src="./images/myTopMovies/MTM Device Mockup-01.jpg" style="width:100%;">
               </div>
 
               <div class="mb-5">
