fixing SoccerStatAnalyser Buttons

--- a/index.html
+++ b/index.html
@@ -538,7 +538,8 @@
                         <h4 class="text-Yellow mb-3">Soccer Stats Analyser</h4>
                         <p class="mb-5">A Web Scraper and stat analyser</p>
                         <div class="d-flex justify-content-evenly w-100">
-                          <a class="btn btn-glow-sm" href="./SoccerStatsAnalyser.html">View Collection</a>
+                          <a class="btn btn-glow-sm" href="https://github.com/YxngDxnny/SoccerStatAnalyser" target="_blank">View Code on Github</a>
+                          <a class="btn btn-glow-sm" href="./SoccerStatsAnalyser.html">View Project</a>
                         </div>
                       </div>
                       
