add tech stack to portfolio items and ASP Projects

--- a/DynamixCapital.html
+++ b/DynamixCapital.html
@@ -136,13 +136,13 @@
                     Javascript
                   </li>
                   <li>
-                    ASP.NET (C#)
+                    ASP.NET Core MVC (C#)
                   </li>
                   <li>
                     Bootstrap
                   </li>
                   <li>
-                    MSSQL
+                    MS SQL Server
                   </li>
                 </ul>
               </div>
