--- a/SoccerStatsAnalyser.html
+++ b/SoccerStatsAnalyser.html
@@ -110,7 +110,10 @@
                     Bootstrap
                   </li>
                   <li>
-                    ASP.NET
+                    ASP.NET Core MVC (C#)
+                  </li>
+                  <li>
+                    MS SQL Server
                   </li>
                 </ul>
               </div>
