--- a/Tribe.html
+++ b/Tribe.html
@@ -124,10 +124,10 @@
                     Bootstrap
                   </li>
                   <li>
-                    ASP.NET
+                    ASP.NET Core MVC (C#)
                   </li>
                   <li>
-                    MSSQL
+                    MS SQL Server
                   </li>
                 </ul>
               </div>
