--- a/MyTopMovies.html
+++ b/MyTopMovies.html
@@ -116,10 +116,10 @@
                     Bootstrap
                   </li>
                   <li>
-                    ASP.NET
+                    ASP.NET Core MVC (C#)
                   </li>
                   <li>
-                    MSSQL
+                    MS SQL Server
                   </li>
                 </ul>
               </div>
