update bestgraphic content 13_03_24

--- a/BestGraphics.html
+++ b/BestGraphics.html
@@ -81,6 +81,10 @@
                   <img src="./images/bestGraphics/Logos/Lumina Tech Brand-01.png" class="gallery-img" style="width:100%;"/>
                 </div>
 
+                <div class="gallery-box mb-5">
+                  <img src="./images/bestGraphics/Logos/Nenzi Logo-13.jpg" class="gallery-img" style="width:100%;"/>
+                </div>
+
               </div>
 
               
@@ -116,6 +120,16 @@
                   <img src="./images/bestGraphics/Flyers/Birthday Flyer.jpg" class="gallery-img" style="width:100%;"/>
                 </div>
 
+                <div class="gallery-box mb-5">
+                  <img src="./images/bestGraphics/Flyers/Flyer 1.jpg" class="gallery-img" style="width:100%;"/>
+                </div>
+
+                
+
+                <div class="gallery-box mb-5">
+                  <img src="./images/bestGraphics/Flyers/Flyer 2.jpg" class="gallery-img" style="width:100%;"/>
+                </div>
+
               </div>
 
               <h2 class="mb-3"><b>Social Media Content</b></h2>
@@ -142,6 +156,10 @@
 
                 <div class="gallery-box bg-yellow mb-5">
                   <img src="./images/bestGraphics/SocialContent/AgroXHub/Join Our Waitlist-01 - Copy.jpg" class="gallery-img" style="width:100%;"/>
+                </div>
+
+                <div class="gallery-box bg-yellow mb-5">
+                  <img src="./images/bestGraphics/SocialContent/AgroXHub/Thank you-01.jpg" class="gallery-img" style="width:100%;"/>
                 </div>
               </div>
 
