Fix Best Graphics links

--- a/BestGraphics.html
+++ b/BestGraphics.html
@@ -65,7 +65,7 @@
                   <img src="./images/bestGraphics/Logos/Nenzi Logo-13.jpg" class="gallery-img" style="width:100%;"/>
                 </div>
 
-                <a class="nav-link btn btn-outline-filled w-100" href="./BestGraphics/Logos.html">
+                <a class="nav-link btn btn-outline-filled w-100" href="./bestgraphics/Logos.html">
                   View More <i class="bi-caret-right"></i><i class="bi-caret-right"></i>
                 </a>
               </div>
@@ -87,7 +87,7 @@
                   <img src="./images/bestGraphics/Flyers/Flyer 2.jpg" class="gallery-img" style="width:100%;"/>
                 </div>
 
-                <a class="nav-link btn btn-outline-filled w-100" href="./BestGraphics/Flyers.html">
+                <a class="nav-link btn btn-outline-filled w-100" href="./bestgraphics/Flyers.html">
                   View More <i class="bi-caret-right"></i><i class="bi-caret-right"></i>
                 </a>
 
@@ -111,7 +111,7 @@
                   <img src="./images/bestGraphics/SocialContent/AgroXHub/Thank you-01.jpg" class="gallery-img" style="width:100%;"/>
                 </div>
 
-                <a class="nav-link btn btn-outline-filled w-100" href="./BestGraphics/SocialContent.html">
+                <a class="nav-link btn btn-outline-filled w-100" href="./bestgraphics/SocialContent.html">
                   View More <i class="bi-caret-right"></i><i class="bi-caret-right"></i>
                 </a>
 
@@ -140,7 +140,7 @@
                   </video>
                 </div>
                 
-                <a class="nav-link btn btn-outline-filled w-100" href="./BestGraphics/MotionGraphics.html" >
+                <a class="nav-link btn btn-outline-filled w-100" href="./bestgraphics/MotionGraphics.html" >
                   View More <i class="bi-caret-right"></i><i class="bi-caret-right"></i>
                 </a>
 
