Add More Flyers

--- a/bestgraphics/Flyers.html
+++ b/bestgraphics/Flyers.html
@@ -58,9 +58,19 @@
               
               <div class="d-flex flex-wrap align-items-center justify-content-evenly">
 
-                <div class="gallery-box bg-yellow mb-5">
-                  <img src="../images/bestGraphics/flyers/AISD Flyer 2.jpg" class="gallery-img" style="width:100%;"/>
+                
+                <div class="gallery-box col-lg-3 mb-5">
+                  <img src="./images/bestGraphics/Flyers/Twif Flyer 1.jpg" class="gallery-img" style="width:100%;"/>
                 </div>
+
+                <div class="gallery-box col-lg-3 mb-5">
+                  <img src="./images/bestGraphics/Flyers/AISD Flyer.jpg" class="gallery-img" style="width:100%;"/>
+                </div>
+
+                <div class="gallery-box col-lg-3 mb-5">
+                  <img src="./images/bestGraphics/Flyers/AISD Flyer 3.jpg" class="gallery-img" style="width:100%;"/>
+                </div>
+
 
                 <div class="gallery-box bg-yellow mb-5">
                   <img src="../images/bestGraphics/Flyers/Birthday Flyer.jpg" class="gallery-img" style="width:100%;"/>
