update best flyers

--- a/bestgraphics/Flyers.html
+++ b/bestgraphics/Flyers.html
@@ -60,15 +60,15 @@
 
                 
                 <div class="gallery-box col-lg-3 mb-5">
-                  <img src="./images/bestGraphics/Flyers/Twif Flyer 1.jpg" class="gallery-img" style="width:100%;"/>
+                  <img src="../images/bestGraphics/Flyers/Twif Flyer 1.jpg" class="gallery-img" style="width:100%;"/>
                 </div>
 
                 <div class="gallery-box col-lg-3 mb-5">
-                  <img src="./images/bestGraphics/Flyers/AISD Flyer.jpg" class="gallery-img" style="width:100%;"/>
+                  <img src="../images/bestGraphics/Flyers/AISD Flyer.jpg" class="gallery-img" style="width:100%;"/>
                 </div>
 
                 <div class="gallery-box col-lg-3 mb-5">
-                  <img src="./images/bestGraphics/Flyers/AISD Flyer 3.jpg" class="gallery-img" style="width:100%;"/>
+                  <img src="../images/bestGraphics/Flyers/AISD Flyer 3.jpg" class="gallery-img" style="width:100%;"/>
                 </div>
 
 
